  <https://github.com/erikrose/more-itertools>`_ (recipes and more):

  - grouper -> recipes.grouper
  - grouper_nofill -> more.chunked (note parameters are switched)
  - chain -> itertools.chain.from_iterable

  The following can now be found in more_itertools.recipes:

  - pairwise
  - consume
  - roundrobin
  - unique_justseen
  - unique_everseen


9.0.1
~~~~~

* Apply fix in 8.9.1 to 9.0.

9.0
~~~

* ``itertools.one()`` now always raises a ValueError and never a
  StopIteration.

8.9.1
~~~~~

* Use six for callable in NonDataProperty, restoring Python 3.1 compatibility.

8.9
~~~

* Added ``KeyTransformingDict.matching_key_for``, allowing the original key
  to be returned.

8.8
~~~

* Added ``context.ExceptionTrap``.

8.7
~~~

* Removed dependency links for ``six``.

8.6
~~~

* Added ``collections`` module with an Everything collection.

8.5
~~~

* Added ``ui.countdown`` function.

8.4
~~~

* ``cmdline.Command`` now exposes an ``invoke`` class method to facilitate
  a common invocation.

8.2
~~~

* ``timing.Stopwatch`` context now returns self for convenience.

8.1
~~~

* Moved `jaraco.dateutil` to `jaraco.tempora` (but kept jaraco.dateutil for
  compatibility). Expect `jaraco.dateutil` to be removed in 9.0.

8.0
~~~

* Package no longer uses 2to3 for Python 3 support, but instead relies on a
  unified code base and compatibility routines (including six).
* Moved ``wallpaper`` module to ``jaraco.desktop`` project.

7.2
~~~

* ``dictlib.FrozenDict`` now supplies ``.copy``.
* Fixed issue in ``FrozenDict`` where ``.__eq__`` didn't work on other
  FrozenDict instances.

7.1
~~~

* Added ``dictlib.FrozenDict``.

7.0
~~~

* Moved `blowfish` module to jaraco.crypto.
* Moved `image` module to jaraco.imaging.

6.8
~~~

* Added `string.simple_html_strip`.

6.7
~~~

* Added `itertools.unique_everseen` from Python docs.

6.6
~~~

* Added `dateutil.parse_timedelta`.

6.5
~~~

* Added `itertools.remove_duplicates` and `itertools.every_other`.